fix: checkbox alignment differences between edit and view modes

--- a/src/app/styles/modules/_form-block.less
+++ b/src/app/styles/modules/_form-block.less
@@ -4,12 +4,13 @@
   margin: 0 -15px;
 
   .control-container {
+    vertical-align: top;
     display: inline-block;
-    align-self: flex-end;
     padding: 8px 15px;
 
     &.small {
       height: 48px;
+      align-self: flex-end;
     }
   }
 }
